css/styles.css
/* ... */
.contact-title{
    font-size: 1.7em;
    margin-bottom: 20px;
    position: relative;
}

.contact-title::before{
    content: '';
    position: absolute;
    width: 70px;
    height: 2px;
    background: var(--gold-color);
    bottom: -10px;
}

.contact-content p, .contact-content a{
    margin: 8px 0;
}

.contact-subtitle{
    font-weight: 800;
    padding-top: 20px;
}

.phone-number{
    position: relative;
    color: var(--white-color);
    text-decoration: none;
    display: block;
}


.contact-addition{
    width: 400px;
    font-weight: 300;
    /* text-decoration: underline; */
}

.contact-link{
    /* margin-left: 30px !important; */
    transition: 0.5s;
    display: flex;
    align-items: center;
}

.contact-link:first-of-type{
    padding-top: 10px !important;
}

.contact-link svg{
    fill: var(--white-color);
    width: 24px;
   transition: 0.5s ease;
   margin-right: 10px;
}


.contact-link:last-of-type svg{
    margin-top: 2px;
}

.contact-link:hover{
    transform: translateX(20px);
    transition: 0.5s;
}


.contact-link a{
    transition: 0.5s ease;
}

.contact-link:hover a, .contact-link:hover svg{
   color: var(--gold-color); 
   fill: var(--gold-color);
   transition: 0.5s ease;
}


.email{
    color: var(--white-color);
    text-decoration: none;
    position: relative;
}

.map-box{
    height: 340px;
    height: 100%;
    width: 500px;
    margin-left: 50px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    transform: translateX(50%);
    opacity: 0;
    /* flex-basis: 50%; */
}

.map{
    height: 80%;
    width: 100%;
    padding: 20px 0;
}

.map-text{
    width: 100%;
    font-size: 0.9em;
    text-align: center;
}

@media screen and (max-width:1100px){
    
    .notarial-action-text{
        padding: 0 50px 50px;
    }
    
    .notarial-action-list{
        grid-template-columns: 340px 340px;
        grid-template-rows: repeat(8, 50px);
    }

    .list-text{
        grid-area: 8 / 1 / 9 / 3;
    }

}

@media screen and (max-width:1050px) {
  
    .nav{
        height: 400px;
    }

    .hamburger{
        display: block;
        cursor: pointer;
        position: relative;
        height: 16px;
        top: -4px;
        width: 40px;
    }

    .hamburger span{
        position: absolute;
        /* top: 0; */
        left: 0;
        display: block;
        width: 40px;
        height: 2px;
        margin-bottom: 5px;
        background: var(--green-color);
        transition: 0.4s ease;
    }

    .hamburger span:last-child{
        margin-bottom: 0;
    }

    .first-ham{
        transform: translateY(50%);
        transition: 0.4s ease;
        /* transform-origin: left; */
        top: 0%;
    }

    .second-ham{
        top: 50%;
    }

    .third-ham{
        transition: 0.4s ease;
        top: 100%;
    }

    .ham-vis-active{
        top: 50%;
        transform: rotate(45deg);
    } 

    .ham-vis-active-minus{
        top: 50%;
        transform: rotate(-45deg);
    }

    .ham-hid-active{
        opacity: 0;
        transition: 0.2s !important;
    }

    .nav-list{
        /* display: none; */
        position: fixed;
        top: 80px;
        left: 50%;
        transform: translateX(-50%);
        flex-direction: column;
        background: #fff;
        height: auto;
        width: 100%;
        color: var(--green-color);
        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
        transition: 0.4s ease;
    }
    
    .hamburger-active{
        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
        transition: 0.4s ease;
    }

    .nav-list li{
        padding: 14px 0;
        display: block;
        width: 100%;
        text-align: center;
        border-bottom: 2px solid #F2F4F4;
        z-index: 6;
    }

    .nav-list li:last-of-type{
        border-bottom: 2px solid #cecece;
        z-index: 5;
    }

    .menu-line{
        display: none;
    }
    
    .header-list-item{
        animation: none;
        display: none;
    }

    #contact-info-container{
        flex-direction: column;
    }
    
    .contact-content{
        margin-right: 0px;
        /* padding: 0 50px; */
    }

    .map-box{
        margin-left: 0;
    }
}

@media screen and (max-width: 920px) {
    #main-page{

    }
    
    .header-description{
    }

    #content-box{
        flex-wrap: wrap;
    }

    #about-me-box{
        /* margin: 100px 200px; */
    }

    #about-me-box .content-img{
        height: 382px;
        width: 340px;
    }

    #about-me-box .content-left{
        margin-right: 0;
        margin-left: 50px;
        /* margin-bottom: 100px; */
    }
}

@media screen and (max-width: 880px) {

    #about-me-box{
        flex-direction: column;
    }

    #about-me-box .content-left{
        margin: 100px 0 0;
        /* order: 0; */
    }

    .half-content{
        font-size: 22px;
    }

}
/* ... */

